@@ -14,6 +14,7 @@ examples were originally written (2005).
 * Added a string coercion before doing a split on dateOrData.
 * Removed old docstrings.
 * Improved getData mapper methods to descend into sub-objects.
+* Improved the output format of the external fetch function.
 
 2009.01.29
 
